# SeamlessDB-Cloud

./: .gitignore  CMakeLists.txt  README.md  build_debug.sh  killall.sh  restart_jaeger.sh  restart_prometheus.sh  run.sh  run_client.sh  run_debug.sh  run_tpcc.sh  start_jaeger.sh
collector/: otel-config.yaml  run_collector
otel-cpp/include/opentelemetry/proto/logs/v1/: logs.pb.h
otel-cpp/include/opentelemetry/proto/metrics/v1/: metrics.pb.h
otel-cpp/include/opentelemetry/proto/profiles/v1development/: profiles.pb.h
otel-cpp/include/opentelemetry/proto/trace/v1/: trace.pb.h
otel-cpp/lib/cmake/opentelemetry-cpp/: opentelemetry-cpp-config-version.cmake  opentelemetry-cpp-config.cmake  opentelemetry-cpp-target-noconfig.cmake  opentelemetry-cpp-target.cmake
otel-cpp/lib/pkgconfig/: opentelemetry_api.pc  opentelemetry_common.pc  opentelemetry_logs.pc  opentelemetry_metrics.pc  opentelemetry_resources.pc  opentelemetry_trace.pc  opentelemetry_version.pc
seamless_client/: main.cpp
src/: debug_log.h
src/benchmark/tpch/: tpch_queries.h  tpch_wk.cpp  tpch_wk.h
src/compute_pool/: CMakeLists.txt  rw_server.cpp  rw_server.h
src/config/: compute_back_config.json  compute_server_config.json  proxy_config.json  storage_server_config.json
src/index/: ix_scan.h
src/optimizer/: plan.h
src/proxy/: proxy.cpp
src/state/: resume_util.cpp
src/storage/: CMakeLists.txt  brpc_textmap_carrier.h  buffer_pool_manager.cpp  buffer_pool_manager.h  storage_service.proto
src/transaction/: transaction.h  transaction_manager.cpp
(+1 files in other folders)
